--- a/creators.html
+++ b/creators.html
@@ -28,7 +28,7 @@
     <!-- Bootstrap CSS / Color Scheme -->
     <link rel="stylesheet" href="css/orange.css" id="theme-color">
 </head>
-<body>
+<body style="overflow-x: hidden;">
 
 <!--navigation-->
 <section class="smart-scroll">
