--- a/creators.html
+++ b/creators.html
@@ -7,8 +7,10 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
+        
+        //TODO: Do not push with debug-mode true
         gtag('config', 'G-T35YHTXC5Z');
+
     </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -72,7 +74,7 @@
                         <div id="mc_embed_signup_scroll" style="align-items: center; justify-content: center;display: flex;">
                             <input type="email" value="" name="email" style="padding: 8px;margin-right: 8px;border-radius: 5px;" id="mce-EMAIL" placeholder="Email-Address" required>
                             <input type="text" name="userType" value="creator" hidden>
-                            <input type="submit" value="Join Beta" name="subscribe"  id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center">
+                            <input type="submit" value="Join Beta" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center">
                         </div>
                     </form>
                 </div>
