--- a/creators.html
+++ b/creators.html
@@ -70,11 +70,11 @@
                 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
                 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
                 <div id="mc_embed_signup">
-                    <form onsubmit="subscribedForm()" action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
+                    <form action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe" onsubmit="submittedForm()">
                         <div id="mc_embed_signup_scroll" style="align-items: center; justify-content: center;display: flex;">
                             <input type="email" value="" name="email" style="padding: 8px;margin-right: 8px;border-radius: 5px;" id="mce-EMAIL" placeholder="Email-Address" required>
                             <input type="text" name="userType" value="creator" hidden>
-                            <input type="submit" value="Join Beta" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center">
+                            <input type="submit" value="Join Beta" name="subscribe"  id="mc-embedded-subscribe" class="btn btn-primary d-inline-flex flex-row align-items-center">
                         </div>
                     </form>
                 </div>
