--- a/creators.html
+++ b/creators.html
@@ -69,9 +69,9 @@
                     and music lovers the best experience in the ecosystem.</p>
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-                <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+                <iframe name="dummyframe" id="dummyframe" style="display: none;" onload="submittedForm()"></iframe>
                 <div id="mc_embed_signup">
-                    <form action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe" onsubmit="submittedForm()">
+                    <form action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll" style="align-items: center; justify-content: center;display: flex;">
                             <input type="email" value="" name="email" style="padding: 8px;margin-right: 8px;border-radius: 5px;" id="mce-EMAIL" placeholder="Email-Address" required>
                             <input type="text" name="userType" value="creator" hidden>
@@ -79,6 +79,7 @@
                         </div>
                     </form>
                 </div>
+                <div id="referCode"></div>
             </div>
         </div>
     </div>
