--- a/fans.html
+++ b/fans.html
@@ -75,9 +75,9 @@
                     By listening to music you directly help your favourite creators.</p>
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-                <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+                <iframe name="dummyframe" id="dummyframe" style="display: none;" onload="submittedForm()"></iframe>
                 <div id="mc_embed_signup">
-                    <form onsubmit="submittedForm()" action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
+                    <form action="https://us-central1-beta-signup-f3742.cloudfunctions.net/addEmail" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="dummyframe">
                         <div id="mc_embed_signup_scroll" style="align-items: center; justify-content: center;display: flex;">
                             <input type="email" value="" name="email" style="padding: 8px;margin-right: 8px;border-radius: 5px;" id="mce-EMAIL" placeholder="Email-Address" required>
                             <input type="text" name="userType" value="listener" hidden>
@@ -85,6 +85,7 @@
                         </div>
                     </form>
                 </div>
+                <div id="referCode"></div>
             </div>
         </div>
     </div>
