--- a/index.html
+++ b/index.html
@@ -39,12 +39,6 @@
             <a class="navbar-brand heading-black" href="index.html">
                 DEMU
             </a>
-            <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
-                    data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span data-feather="grid"></span>
-            </button>
-            
         </nav>
     </div>
 </section>
@@ -55,8 +49,8 @@
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center"> 
             <div class="circle-content" >
                 <div class="circle" id="circle">
-                    <div class="left"  onmouseover="focusLeftItem()" onmouseout="unFocusLeftItem()" onclick="window.location.href='fans.html'"></div>
-                    <div class="right"  onmouseover="focusRightItem()" onmouseout="unFocusRightItem()" onclick="window.location.href='creators.html'"></div>
+                    <div class="left"  id="left_circle" onmouseover="focusLeftItem()" onmouseout="unFocusLeftItem()" onclick="window.location.href='fans.html'"></div>
+                    <div class="right"  id="right_circle" onmouseover="focusRightItem()" onmouseout="unFocusRightItem()" onclick="window.location.href='creators.html'"></div>
                     <div class="inner-circle" id="inner-circle">DEMU</div>
                     <p id="left_text" class="left-text">FANS</p>
                     <p id="right_text" class="right-text">CREATORS</p>
