--- a/creators.html
+++ b/creators.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">Your music. Your way.</h1>
+                <h1 class="heading-black text-capitalize">Free for creators. Forever.</h1>
                 <p class="lead py-3">A decentralized music streaming platform that leverages the potential of blockchain technology to give artists and
                     and music lovers the best experience in the ecosystem.</p>
                 <!-- Begin Mailchimp Signup Form -->
@@ -142,7 +142,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
-                <h2 class="heading-black">Free for creators. Forever.</h2>
+                <h2 class="heading-black">You own your music.</h2>
                 <p class="text-muted lead">Demu will never charge artists to upload their own work on the platform.</p>
             </div>
         </div>
