--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center"> 
             <div class="circle-content" >
                 <div class="circle" id="circle">
-                    <div class="left"  id="left_circle" onclick="window.location.href='fans.html'"></div>
-                    <div class="right"  id="right_circle" onclick="window.location.href='creators.html'"></div>
+                    <div class="left" onmouseover="focusLeftItem()" onmouseout="unFocusLeftItem()" id="left_circle" onclick="window.location.href='fans.html'"></div>
+                    <div class="right" onmouseover="focusRightItem()" onmouseout="unFocusRightItem()" id="right_circle" onclick="window.location.href='creators.html'"></div>
                     <div class="inner-circle" id="inner-circle"><img src="/img/logo_demu.png" style="width: 50%; transform: translateX(6px);"></div>
                     <p id="left_text" class="left-text">FANS</p>
                     <p id="right_text" class="right-text">CREATORS</p>
